Plugin Name: Membership 2
Author: Philipp Stracker, Fabio Jun, Rheinard Khorf

Change Log:
----------------------------------------------------------------------

1.0.2.3
----------------------------------------------------------------------
- Add new email template to customize the Forgot Password email
- Improve transaction-logging for Authorize.Net payments
- Improve UI of the Authorize.Net payment form on front end
- Fix possible issue with Authorize.Net Gateway that might send empty form to the gateway
- Fix PHP warnings caused by Profile Fields Add-on
- Fix display of line-breaks in membership description on front-end
- Fix bug in invitation codes/coupons Add-on that randomly created empty codes
- Fix invitation code Add-on so errors are not displayed for correct invitation codes during checkout
- Fix for caching issues on WP Engine
- Fix rare issues when registering username that is already in use

1.0.2.2
----------------------------------------------------------------------
- Improve the shortcode column in the admin membership list
- Improve layout of [ms-note] messages on front-end and select lists in admin pages
- Improve performance of the billings page, show additional details in edit-invoice screen
- Fix wrong registration workflow that showed membership list instead of payment form
- Fix the Reset Password workflow
- Fix issue in WP 4.3 that sent password-reset emails during user registration
- Fix incompatibility with MarketPress 3
- Fix problem with user registration when the password fields were hidden via Profile Fields Add-on
- Fix ms-protect-content shortcode: Resolve shortcodes in protected content also for admin users
- Fix bug in setup-wizard that sometimes did not finish after creating the first membership
- Fix issue where Manual Payment displayed price multiple times (e.g. when using Yoast SEO)
- Fix an issue with Internet Explorer privacy settings that caused IE to reject M2 cookies