@@ -3185,8 +3185,10 @@ body #wpwrap .ms-wrap .wpmui-radio-slider-wrapper.inline-label .wpmui-field-labe
   height: 100px;
 }
 
-.ms-settings-payment .ms-global-payment-wrapper .wpmui-field-input {
+.ms-settings-payment .ms-global-payment-wrapper .wpmui-field-input,
+.ms-settings-payment .ms-global-payment-wrapper .select2-container {
   width: 100%;
+  display: block;
 }
 .ms-settings-payment .ms-global-payment-wrapper th.column-active,
 .ms-settings-payment .ms-global-payment-wrapper td.column-active {
