@@ -7,6 +7,7 @@ Change Log:
 1.0.2.3
 ----------------------------------------------------------------------
 - Add new email template to customize the Forgot Password email
+- Add new option to Authorize.Net gateway settings: "Secure Payment" asks for CVC code on every payment
 - Improve transaction-logging for Authorize.Net payments
 - Improve UI of the Authorize.Net payment form on front end
 - Fix possible issue with Authorize.Net Gateway that might send empty form to the gateway
